📚 Add icons, update README.md

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -43,6 +43,13 @@
         "group": "watch",
         "reveal": "never"
       }
+    },
+    {
+      "label": "publish-extension",
+      "type": "shell",
+      "command": "vsce publish",
+      "group": "build",
+      "problemMatcher": []
     }
   ]
 }
