--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,12 @@
     "semi": [
       "error",
       "always"
+    ],
+    "no-unused-vars": [
+      "error",
+      {
+        "args": "none"
+      }
     ]
   },
   "ignorePatterns": [
