chore: 🔧 Update VSCode version and add package task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -45,6 +45,13 @@
       }
     },
     {
+      "label": "package",
+      "type": "shell",
+      "command": "vsce package",
+      "group": "build",
+      "problemMatcher": []
+    },
+    {
       "label": "publish-extension",
       "type": "shell",
       "command": "vsce publish",
